@@ -7,6 +7,8 @@ Changelog
 - Removed the TestSuite rating. I decided it was too close to looking at
   code quality. Pyroma no longer cares if you have tests or not.
 
+- Fixed #36: PyPI now requires https.
+
 
 2.1 (2016-10-18)
 ----------------
